--- a/index.html
+++ b/index.html
@@ -14,15 +14,48 @@ text-align:center;
     text-align:center;
     border:4px solid orange;
 }
+ul{
+    list-style-type: none;
+margin:0;
+padding:0;
+overflow: hidden;
+}
+li{
+    display:inline;
+}
+li a{
+    display: block;
+color:white;
+text-align:center;   
+ padding: 14px 20px;
+    background-color: #dddddd;
+}
+li a:hover{
+    background-color:#111;
+}
+</style>
+<style>
+body {
+  background-image: url('https://i.ibb.co/WxH3WPT/pumpkin.png');
+}
 </style>
 <title>Spooky's Home</title>
 </head>
 
 <body>
+<div style="background-color:black;color:white;padding:20px;">
+ <h1 class="monospace">Spooky's Haunted Patch</h1>
 
-<h1 class="monospace">Spooky's Haunted Patch</h1>
 
-<img src="https://thumbs.dreamstime.com/b/horizontal-seamliess-background-pumpkins-autumn-leaves-vector-illustration-white-100458021.jpg" width="1900" height="435">
+<ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#activities">Activities</a></li>
+    <li><a href="#games">Games</a>
+    <li><a href="#aboutme">About Me</a></li>
+    <li><a href="#support">Support</a></li>
+</ul>
+
+
 <button type="button" onclick="alert('You are cuter than a pumpkin! &#9786;')">Click for a surprise!</button>
 <button type="button" onclick="color()">Change Color</button>
 <script>
@@ -33,9 +66,6 @@ text-align:center;
 </script>
 
  <h2>Hi! Welcome to Spooky's Haunted Patch!</h2>
-
-   <p>There will be an arrow pointing up after the period. &#8593; </p>
-    <h5> I learned all of this during this lab through <a href="https://www.w3schools.com">here</a></h5>
-<p> This should show</p>
+</div>
 </body>     <!-- Ends what page will show -->
 </html>     <!-- Ends the document -->
