--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@ body {
 <body>
 <div style="background-color:black;color:white;padding:20px;">
  <h1 class="monospace">Spooky's Haunted Patch</h1>
-
+https://lettyc28.github.io/web/
 
 <ul>
+    <li><a href="https://lettyc28.github.io/web/#Home" target="_blank">Sup home</a></li>
+    <li><a href="https://lettyc28.github.io/web/#Activities" target="_blank">Active</a></li>
     <li><a class="active" href="#home">Home</a></li>
     <li><a href="#activities">Activities</a></li>
     <li><a href="#games">Games</a>
